# tfm

./: README.md
Edu-Dron/: README.md  plantilla.py
Edu-Dron/api/: dron.py
dron01_pkg/: CMakeLists.txt  package.xml
dron01_pkg/launch/: my_apm.launch  my_iris.launch
dron01_pkg/worlds/: my_iris.world
my_hector_uavs/: .~lock.Z_Personalizar robots en Gazebo, aruco y plugins.odt#  CMakeLists.txt  package.xml
my_hector_uavs/launch/: my_hector_uav.launch  my_spawn_simplified_quadrotor.launch  two_hector_uavs.launch  two_visualization_paths.launch  visualization_paths.launch
my_hector_uavs/rviz/: my_hector_controller_paths.rviz  my_hector_lf_paths.rviz
my_hector_uavs/scripts/: hector_quadrotor_simple_movement.py
my_hector_uavs/src/: hector_quadrotor_controller.cpp  hector_quadrotor_controller_paths.cpp  hector_quadrotor_simple_movement.cpp  two_hector_quadrotors_lf.cpp  two_hector_quadrotors_lf_paths.cpp
my_hector_uavs/urdf/: my_hector_quadrotor_plugins.xacro  my_simplified_quadrotor.xacro
pythonclient/: hello_drone.py
webots_worlds/: .pyramidMap.wbproj  .webots_quadPlus.wbproj
